Revision history for Email-Sender

{{$NEXT}}

1.300028  2016-04-21 17:49:14+01:00 Europe/London
        - make Email::Sender::Util->easy_transport public

1.300027  2016-04-03 10:02:52-04:00 America/New_York
        - no changes since 1.300026
        - SMTP transport now uses Net::SMTP for SSL and STARTTLS support

1.300026  2016-03-21 13:50:22-04:00 America/New_York (TRIAL RELEASE)
        - another tweak to Net::SMTP and Test::MockObject, thanks to Matthew
          Horsfall

1.300025  2016-03-19 17:11:34-04:00 America/New_York (TRIAL RELEASE)
        - tweak how we load Net::SMTP to avoid problems when testing with a
          Test::MockObject-mocked SMTP client

1.300024  2016-03-19 14:13:16-04:00 America/New_York (TRIAL RELEASE)
        - Net::SMTP 3.07 is now required, both for SSL support and for a fix
          to datasend implementation referenced in 1.300019 changes

1.300023  2016-03-19 14:06:51-04:00 America/New_York (TRIAL RELEASE)
        - Email::Sender::Transport::SMTP now uses Net::SMTP for SSL
          connections, and for a STARTTLS implementation

1.300021  2015-10-15 13:53:52-04:00 America/New_York
        - when SMTP connection fails, include host and port in error

1.300020  2015-09-03 14:00:04-04:00 America/New_York
        - no changes since 1.300019

1.300019  2015-08-10 15:48:02-04:00 America/New_York (TRIAL RELEASE)
        - only work around Net::SMTP on broken (pre-3.07) versions
        - avoid uninitialized warning when delivering to Maildir

1.300018  2015-05-27 15:28:44-04:00 America/New_York
        - stable release of changes from 1.300017

1.300017  2015-05-14 13:17:39-04:00 America/New_York (TRIAL RELEASE)
        - cope with a double-encoding bug in Net::SMTP
          for details, https://rt.cpan.org/Ticket/Display.html?id=104433

1.300016  2014-10-10 22:54:00-04:00 America/New_York
        - no changes since 1.300015, just made non-trial release

1.300015  2014-09-12 22:01:37-04:00 America/New_York (TRIAL RELEASE)